# conan-cmake

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt  docker-install.sh  install.sh
main/: CMakeLists.txt  main.cpp
player/: CMakeLists.txt  session.cpp  session.h
